[project]
name = "gdtw"
description = "General Dynamic Time Warping"
version = "1.2.0"
requires-python = ">=3.7"
authors = [
	{name = "Dave Deriso", email = "dderiso@alumni.stanford.edu"},
]
dependencies = [
	'numpy>=1.20.0',
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
"Bug Tracker" = "https://github.com/dderiso/gdtw/issues"

[build-system]
requires = [
    "setuptools",
    "numpy>=1.20.0",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
